2008-11-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: If the overview XML input has no
	  <functionality> field, the functionality entry stays a NULL
	  pointer. On some systems like Solaris outputting a NULL pointer
	  with "printf()" leads to a segmentation fault (under Linux it is
	  no problem, the output will be "(null)"). Fix for bug #213.

2008-10-28  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Match the field headers of IEEE-1284 device
	  IDs case insensitively. Some IDs have these headers not
	  all-uppercase, like Kyocera. Fixed also that the manufacturer
	  name can creep into the "*Product:" field of the PPD when the
	  model name cannot be read from the device ID.

	* lib/Foomatic/DB.pm: Bumped version number in PPD header to 4.0.0.

	* README, USAGE, configure.ac, foomatic-addpjloptions.in, 
	  foomatic-perl-data.c, lib/Foomatic/DB.pm:
	  s/GhostScript/Ghostscript/

	* foomatic-ppd-to-xml.in, lib/Foomatic/DB.pm: Several fixes to
	  find existing XMLs and to let merging changes into existing
	  XMLs work correctly.

2008-10-24  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in, lib/Foomatic/DB.pm: Let
	  foomatic-ppd-to-xml find already existing printer entries and
	  merge the reference to the PPD file into them instead of
	  creating a new XML file. Let all XML files get created in a
	  user-specified directory.

	* lib/Foomatic/DB.pm: Let the perltoxml() function not put
	  hard-coded comments into printer entries.

2008-10-23  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in, lib/Foomatic/DB.pm: Moved driver and PDL
	  magic of the XML file generation into lib/Foomatic/DB.pm.

2008-10-22  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in, Makefile.in, configure.ac,
	  lib/Foomatic/DB.pm: Added new "foomatic-ppd-to-xml" to generate
	  Foomatic XML files corresponding to a given PPD file.
